--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <script defer src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>odin-etch-a-sketch</title>
 </head>
 <body>
-    <h1>odin-etch-a-sketch</h1>
+    <h1>Etch-A-Sketch</h1>
     <div class="header">
         <h6>select the size</h6>
-        <button id="popup">Select</button>
+        <button id="popup" class="btn btn-danger">Select</button>
     </div>
-    <div class="container"></div>
+    <div class="board"></div>
     <div class="footer">
-        <button>black</button>
-         <button>random</button>
-          <button>reset</button>
+        <button class="btn btn-dark">black</button>
+         <button class="btn btn-warning">random</button>
+          <button class="btn btn-primary">reset</button>
     </div>
 </body>
 </html>
