work almost done

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="board"></div>
     <div class="footer">
-        <button class="btn btn-dark">black</button>
-         <button class="btn btn-warning">random</button>
-          <button class="btn btn-primary">reset</button>
+        <button class="btn btn-dark">Black</button>
+         <button class="btn btn-warning">Random</button>
+          <button class="btn btn-primary">Reset</button>
     </div>
 </body>
 </html>
